// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartDonut Component get data error 1`] = `
<div>
  <h2
    class="sc-dkPtRN cZRHky"
  >
    Error: Network Error
  </h2>
</div>
`;

exports[`ChartDonut Component get data success 1`] = `
<div>
  <div
    class="sc-bdvvtL cfVjDS"
  >
    <canvas
      height="150"
      role="img"
      width="300"
    />
  </div>
</div>
`;

exports[`ChartDonut Component loading data 1`] = `
<div>
  <div
    class="sc-bdvvtL cfVjDS"
  >
    <div
      class="sc-gsDKAQ giLnYi"
    >
      <div
        class="spinner-border"
      />
    </div>
  </div>
</div>
`;
